recursion.cons.nfirst.Nfirst.scala.error
Erreur de compilation :
Nfirst:5: error: type mismatch;
 found   : Int
 required: List[Int]
    return l.head
             ^Nfirst:7: error: not found: value nth
  return nth(l.tail,n-1)
         ^